--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "gh-pages-clean"
   },
   "dependencies": {
+    "motion": "^12.26.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -32,5 +33,4 @@
     "vite": "^7.2.4"
   },
   "homepage": "https://gurjinder7.github.io"
-
 }
