--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "clean": "gh-pages-clean"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "motion": "^12.26.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
